@@ -33,6 +33,7 @@ module ActiveMerchant #:nodoc:
     # * Creditel
     # * Confiable
     # * Mada
+    # * BpPlus
     #
     # For testing purposes, use the 'bogus' credit card brand. This skips the vast majority of
     # validations, allowing you to focus on your core concerns until you're ready to be more concerned
@@ -118,6 +119,7 @@ module ActiveMerchant #:nodoc:
       # * +'creditel'+
       # * +'confiable'+
       # * +'mada'+
+      # * +'bp_plus'+
       #
       # Or, if you wish to test your implementation, +'bogus'+.
       #
